[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/ChaosController.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/ChaosMessage_fadeOut.tres" type="Animation" id=2]
[ext_resource path="res://assets/materials/corrupt.tres" type="Material" id=3]
[ext_resource path="res://assets/sound/debuff_hit1.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/debuff_hit2.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool invert;

void fragment() {
    COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
    float avg = (COLOR.r + COLOR.g + COLOR.b) / 3.0;
	if (invert) {
		COLOR.rgb = vec3(1) - COLOR.rgb;
	} else {
    	COLOR.rgb = vec3(avg);
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/invert = null

[sub_resource type="Animation" id=3]
resource_name = "ChaosMessage_fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("MessageBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ChaosController" type="Control"]
margin_right = 1600.0
margin_bottom = 900.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
CorruptMaterial = ExtResource( 3 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.545098, 0.0745098, 0.0745098, 1 )

[node name="MonochromeFilter" type="ColorRect" parent="."]
visible = false
material = SubResource( 2 )
margin_right = 1600.0
margin_bottom = 900.0

[node name="MessageBox" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MessageBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 30.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="ChaosMessage" type="VBoxContainer" parent="MessageBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 30.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChaosTitle" type="Label" parent="MessageBox/ChaosMessage"]
margin_top = 14.0
margin_right = 200.0
margin_bottom = 28.0
text = "GPU DAMAGED"
align = 1

[node name="ChaosContent" type="Label" parent="MessageBox/ChaosMessage"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 46.0
text = "Visuals impaired"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChaosMessage_fadeIn = SubResource( 3 )
anims/ChaosMessage_fadeOut = ExtResource( 2 )

[node name="ChaosMessageTimer" type="Timer" parent="."]
one_shot = true

[node name="DebuffSounds" type="Node" parent="."]

[node name="DebuffSound1" type="AudioStreamPlayer2D" parent="DebuffSounds"]
stream = ExtResource( 4 )

[node name="DebuffSound2" type="AudioStreamPlayer2D" parent="DebuffSounds"]
stream = ExtResource( 5 )

[connection signal="timeout" from="ChaosMessageTimer" to="." method="_on_ChaosMessageTimer_timeout"]
